# course-nnfs

./: .gitignore  main.py  pyproject.toml
chapter-eight/: 14_partial_derivative.py  15_gradient_and_chain_rule.py
chapter-eleven/: 24_testing_with_out_of_samle_data.py
chapter-five/: 8_categorical_cross_entropy.py  9_accuracy_calculation.py
chapter-four/: 6_activation_functions.py  7_hand_crafted_network.py
chapter-nine/: 16_backpropagation.py  17_multiple_backpropagation.py  18_cross_entropy_and_softmax_derivative.py
chapter-one/: 1_coding_single_neurons.py
chapter-seven/: 11_derivatives.py  12_numerical_differentiation.py  13_analytical_derivative.py
chapter-six/: 10_introducing_optimization.py
chapter-ten/: 19_optimizers.py  19_stochastic_gradient_optimizer.py  20_stochastic_gradient_descent_optimizer.py  21_adgrad_optimizer.py  22_rms_prop_optimizer.py  23_adam_optimizer.py
chapter-three/: 4_hidden_layers.py  5_training_data.py
chapter-two/: 2_introducing_numpy.py  3_batches_of_features.py
