[tool.poetry]
name = "neural-networks-from-scratch"
version = "0.1.0"
description = ""
authors = ["Tamas Paulin <tamasdavid.paulin@tesco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
nnfs = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

